# infinite-context-system

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  CHANGELOG.md  CITATION.cff  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.py  Dockerfile  LICENSE  MCP_GUIDE.md  POSTMAN_COLLECTION.json  README.md  Research_Paper_ICS_Elite.md  SECURITY.md  config.py  llm_interface.py  main.py  mcp_server.py  orchestrator.py  production_example.py  pyproject.toml  references.bib  requirements.txt  semantic_cache.py  smoke_test.py  tier1_active_context.py  tier2_compressed_memory.py  tier3_vector_retrieval.py  tier4_persistent_memory.py  verification_elite.py  verification_elite_mocked.py  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: supreme_templates.yml
.github/profile/: README.md
.github/workflows/: ci.yml  performance-benchmark.yml  security-scan.yml  supreme_pipeline.yml
cloudflare/: config.yaml  index.html
cloudflare/docs/: README.md  Research_Paper_ICS.md  Research_Paper_ICS_Elite_Full.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GRANTS.md  INVESTORS.md  PERFORMANCE.md  ROADMAP.md  SECURITY.md  TASK_HISTORY.md  WALKTHROUGH.md
examples/: mcp_usage_demo.json
infrastructure/terraform/: main.tf
research/: ICS_Research_Paper.tex  Research_Paper_ICS_Elite.md
src/agents/: orchestrator.py  tier1_active_context.py  tier2_compressed_memory.py  tier3_vector_retrieval.py  tier4_persistent_memory.py
src/api/: main.py  mcp_server.py
storage/: tier1_active.jsonl
tests/unit/: test_orchestrator.py  test_tiers.py
