[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-context-system"
version = "2.0.0"
description = "A 4-tier hybrid context management framework for effectively infinite LLM memory."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Infinite Context Team", email = "support@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.14.0",
    "qdrant-client>=1.8.2",
    "neo4j>=5.18.0",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "tiktoken>=0.6.0",
    "numpy>=1.26.4",
    "pydantic>=2.6.4",
    "mcp>=1.2.0",
    "fastmcp>=0.4.1",
    "networkx>=3.2.1",
]

[project.urls]
"Homepage" = "https://github.com/rjbizsolution23-wq/infinite-context-system"
"Bug Tracker" = "https://github.com/rjbizsolution23-wq/infinite-context-system/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
