[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-context-system"
version = "3.0.0"
authors = [
  { name="Rick Jefferson", email="rickjefferson@rickjeffersonsolutions.com" },
]
description = "Elite 4-Tier Infinite Context Orchestrator with Self-RAG and Multi-Modal Perception"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai",
    "qdrant-client",
    "numpy",
    "redis",
    "sentence-transformers",
    "pillow",
    "flashrank",
    "fastmcp",
    "tiktoken",
    "networkx"
]

[project.urls]
"Homepage" = "https://rickjeffersonsolutions.com"
"Bug Tracker" = "https://github.com/rjbizsolution23-wq/infinite-context-system/issues"
